Readme extended